# RosalilaFramework

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Rosalila.cpp  Rosalila.h  Sources.mk  appveyor.yml  build.bat  system.h
.github/workflows/: ci.yml  release.yml
IA/: Automata.cpp  Automata.h  Estado.cpp  Estado.h  IA.cpp  IA.h  Transicion.cpp  Transicion.h
Input/: Boton.cpp  Boton.h  Input.cpp  Input.h  Receiver.cpp  Receiver.h
Menu/: Elemento.cpp  Elemento.h  MenuBarra.cpp  MenuBarra.h  MenuBoton.cpp  MenuBoton.h  MenuCharSelect.cpp  MenuCharSelect.h  MenuContenedor.cpp  MenuContenedor.h  MenuImagen.cpp  MenuImagen.h  MenuLista.cpp  MenuLista.h  MenuTexto.cpp  MenuTexto.h
Painter/: Animation.cpp  Animation.h  Cube.cpp  Cube.h  Image.cpp  Object3D.cpp  Object3D.h  Painter.cpp  Painter.h  Timer.cpp  smpeg.h
RosalilaAI/: Automata.cpp  Automata.h  Estado.cpp  Estado.h  RosalilaAI.cpp  RosalilaAI.h  Transicion.cpp  Transicion.h
RosalilaApiIntegrator/: Leaderboard.cpp  Leaderboard.h  LeaderboardEntry.cpp  LeaderboardEntry.h  RosalilaApiIntegrator.cpp  RosalilaApiIntegrator.h
RosalilaGraphics/: Animation.cpp  Animation.h  Color.cpp  Color.h  Cube.cpp  Cube.h  Explosion.cpp  Explosion.h  FlatShadow.cpp  FlatShadow.h  Image.cpp  Image.h  MPEGfilter.h  Object3D.cpp  Object3D.h  RosalilaGraphics.cpp  RosalilaGraphics.h  SDL_Movie.h  Timer.cpp  Timer.h  smpeg.h
RosalilaGraphics/Drawables/: DrawablePoint.cpp  DrawablePoint.h  DrawableRectangle.cpp  DrawableRectangle.h  DrawableTriangle.cpp  DrawableTriangle.h
RosalilaGraphics/Effects/: GrayscaleEffect.cpp  GrayscaleEffect.h  PointExplosionEffect.cpp  PointExplosionEffect.h  ScreenShakeEffect.cpp  ScreenShakeEffect.h  TransparencyEffect.cpp  TransparencyEffect.h
RosalilaGraphics/Notifications/: Notification.cpp  Notification.h  NotificationHandler.cpp  NotificationHandler.h
RosalilaInputs/: Boton.cpp  Boton.h  Button.cpp  Button.h  Receiver.cpp  Receiver.h  RosalilaInputs.cpp  RosalilaInputs.h
RosalilaMenus/: Elemento.cpp  Elemento.h  MenuBarra.cpp  MenuBarra.h  MenuBoton.cpp  MenuBoton.h  MenuCharSelect.cpp  MenuCharSelect.h  MenuContenedor.cpp  MenuContenedor.h  MenuGallery.cpp  MenuGallery.h  MenuImagen.cpp  MenuImagen.h  MenuLista.cpp  MenuLista.h  MenuTexto.cpp  MenuTexto.cpp.cbTemp  MenuTexto.h  MenuTexto.h.cbTemp
RosalilaNet/: RosalilaNet.cpp  RosalilaNet.h
RosalilaNetwork/: RosalilaNetwork.cpp  RosalilaNetwork.h
RosalilaParser/: Node.cpp  Node.h  RosalilaParser.cpp  RosalilaParser.h
RosalilaParser/TinyXml/: tinyxml.h
RosalilaScreens/: Game.cpp  Game.h  Screen.h
RosalilaSound/: RosalilaSound.cpp  RosalilaSound.h
RosalilaUtility/: Font.cpp  Font.h  HitBox.cpp  HitBox.h  Hitbox.cpp  Hitbox.h  Line.cpp  Line.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  RosalilaUtility.cpp  RosalilaUtility.h
TinyXml/: tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
Utility/: Utility.cpp  Utility.h
examples/: 01_Graphics.cpp  02_Inputs.cpp  03_Sound.cpp  04_Parser.cpp  05_Filters.cpp  05_Networking.cpp  06_Notifications.cpp  CMakeLists.txt
examples/assets/: config.json  example.json
include/: Rosalila.h  dirent.h
include/RosalilaApiIntegrator/: Leaderboard.h  LeaderboardEntry.h  RosalilaApiIntegrator.h
include/RosalilaGraphics/: Color.h  FlatShadow.h  Image.h  RosalilaGraphics.h
include/RosalilaGraphics/Drawables/: DrawablePoint.h  DrawableRectangle.h  DrawableTriangle.h
include/RosalilaGraphics/Effects/: GrayscaleEffect.h  PointExplosionEffect.h  ScreenShakeEffect.h  TransparencyEffect.h
include/RosalilaGraphics/Notifications/: Notification.h  NotificationHandler.h
include/RosalilaInputs/: RosalilaInputs.h
include/RosalilaNet/: RosalilaNet.h
include/RosalilaParser/: Node.h  RosalilaParser.h  json.hpp
include/RosalilaSound/: RosalilaSound.h
include/RosalilaUtility/: Hitbox.h  Line.h  Point.h  RosalilaUtility.h
src/: Rosalila.cpp  dirent.cpp
src/RosalilaApiIntegrator/: Leaderboard.cpp  LeaderboardEntry.cpp  RosalilaApiIntegrator.cpp
src/RosalilaGraphics/: Color.cpp  FlatShadow.cpp  Image.cpp  RosalilaGraphics.cpp
src/RosalilaGraphics/Drawables/: DrawablePoint.cpp  DrawableRectangle.cpp  DrawableTriangle.cpp
src/RosalilaGraphics/Effects/: GrayscaleEffect.cpp  PointExplosionEffect.cpp  ScreenShakeEffect.cpp  (+1 more)
src/RosalilaInputs/: RosalilaInputs.cpp
src/RosalilaNet/: RosalilaNet.cpp
src/RosalilaParser/: Node.cpp  RosalilaParser.cpp
src/RosalilaSound/: RosalilaSound.cpp
src/RosalilaUtility/: Hitbox.cpp  Line.cpp  Point.cpp  RosalilaUtility.cpp
(+5 files in other folders)
