cmake_minimum_required(VERSION 3.5)
include_directories(../include)
set (CMAKE_CXX_STANDARD 11)
link_directories(../build)

file( GLOB EXAMPLE_SOURCES *.cpp )

foreach(EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
  file(RELATIVE_PATH SOURCE_FILE_NAME ${CMAKE_CURRENT_SOURCE_DIR} ${EXAMPLE_SOURCE} )
  string( REPLACE ".cpp" "" EXECUTABLE_NAME ${SOURCE_FILE_NAME} )
  add_executable(${EXECUTABLE_NAME} ${SOURCE_FILE_NAME})
  IF (WIN32)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    target_link_libraries( ${EXECUTABLE_NAME} modio )
  ENDIF ()
  IF (APPLE)
    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/../CMAKE")
    FIND_PACKAGE(SDL2 REQUIRED)
    FIND_PACKAGE(SDL2_IMAGE REQUIRED)
    FIND_PACKAGE(SDL2TTF REQUIRED)
    FIND_PACKAGE(SDL2Mixer REQUIRED)

    find_package(OpenGL REQUIRED)

    include_directories(${SDL2_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR} ${SDL2Mixer_INCLUDE_DIR})
    target_link_libraries( ${EXECUTABLE_NAME} rosalila ${OPENGL_LIBRARIES} ${SDL2_LIBRARY} ${SDL2TTF_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${SDL2Mixer_LIBRARY})
  ENDIF ()
  IF (UNIX AND NOT APPLE)
    target_link_libraries ( ${EXECUTABLE_NAME} rosalila)
  ENDIF ()
endforeach(EXAMPLE_SOURCE)